[package]
name = "solana-sha256-hasher"
description = "Solana SHA256 hashing"
documentation = "https://docs.rs/solana-sha256-hasher"
version = "2.2.1"
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
sha2 = ["dep:sha2"]
metrics = ["log"]

[dependencies]
solana-hash = { workspace = true, default-features = false }
log = { workspace = true, optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
# sha2 should be removed in the next breaking release,
# as there's no reason to use the crate instead of the syscall
# onchain
sha2 = { workspace = true, optional = true }
solana-define-syscall = { workspace = true }

[dev-dependencies]
rand = "0.9.1"

[lints]
workspace = true
